--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -4,7 +4,6 @@ input[type="password"],
 input[type="email"],
 input[type="url"],
 textarea {
-	border: none;
 	border: 1px solid var(--color-border);
 	border-radius: 5px;
 	padding: .5em;
