--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -215,7 +215,7 @@
 // Notices
 .post .notice,
 .error404 #searchform {
-	background: var(--color-text-meta);
+	background: var(--color-surface-alt);
 	display: block;
 	padding: 1em;
 }
