--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -477,7 +477,7 @@ h4.entry-title {
 	}
 
 	.has-white-color {
-		color: var(--color-surface);
+		color: var(--color-on-cover);
 	}
 
 	.has-very-light-gray-background-color {
