--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -47,6 +47,7 @@
 
 		&:hover {
 			background-color: var(--color-text-muted);
+			color: var(--color-surface);
 		}
 	}
 }
